# python-project-83

./: .gitignore  README.md  create_table.sql  database.sql  pyproject.toml
page_analyzer/: app.py  checks.py  db.py  url.py  urls.py
page_analyzer/handlers/: checks.py  url.py  urls.py
page_analyzer/templates/: index.html  inner_layout.html  layout.html  url.html  urls.html
