[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["RKV102 <roman.krilow@mail.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
validators = "^0.28.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
